Fixes for building RPM

--- a/src/main/resources/archetype-resources/Dockerfile
+++ b/src/main/resources/archetype-resources/Dockerfile
@@ -1,6 +1,10 @@
-##### Apache cloudstack Plugins
+FROM centos:7
 
-### Building ###
-```
-make docker-builder
-make rpm
+RUN yum install -y \
+        java-1.8.0-openjdk-devel \
+        git \
+        maven \
+        rpm-build \
+        rpm-sign && yum clean all
+
+WORKDIR "/src"
