--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.apache.cloudstack</groupId>
-  <artifactId>acs-plugin-archetype</artifactId>
+  <groupId>org.apache.cloudstack.archetype</groupId>
+  <artifactId>acs-plugin</artifactId>
   <version>1.0</version>
   <packaging>maven-archetype</packaging>
-
-  <name>acs-plugin-archetype</name>
 
   <build>
     <extensions>
