--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -36,7 +36,7 @@
   </build>
   <properties>
     <jdk.version>1.8</jdk.version>
-    <cloudstack.version>4.11.3.0</cloudstack.version>
+    <cloudstack.version>${cloudstackVersion}</cloudstack.version>
     <checkstyle.version>3.1.0</checkstyle.version>
     <global.version>2.0.3</global.version>
     <powermock.version>1.6.6</powermock.version>
