--- a/src/main/resources/archetype-resources/Dockerfile
+++ b/src/main/resources/archetype-resources/Dockerfile
@@ -4,11 +4,12 @@ ARG uid="1000"
 ARG gid="1000"
 
 RUN yum install -y \
-        java-1.8.0-openjdk-devel \
+        java-11-openjdk-devel.x86_64 \
         git \
         maven \
         rpm-build \
-        rpm-sign && yum clean all
+        rpm-sign && \
+    yum clean all
 
 # we add user's local user into docker image so we can link in .m2 repo
 RUN groupadd -g $gid builder || echo "gid exists" \
