Add support to build a Docker image from a cloudstack server image

--- a/src/main/resources/archetype-resources/Makefile
+++ b/src/main/resources/archetype-resources/Makefile
@@ -1,12 +1,18 @@
 REGISTRY ?= acs-plugin
 IMAGE ?= ${REGISTRY}/cloudstack-plugins-builder
+PLUGIN_ARTIFACT ?= $(shell mvn -q -Dexec.executable=echo -Dexec.args='$${project.artifactId}' --non-recursive exec:exec)
+PLUGIN_VERSION ?= $(shell mvn -q -Dexec.executable=echo -Dexec.args='$${project.version}' --non-recursive exec:exec)
+PLUGIN_IMAGE ?= ${REGISTRY}/cloudstack-server_${PLUGIN_ARTIFACT}:${PLUGIN_VERSION}
+SERVER_IMAGE ?= "cloudstack/simulator-thin"
+SERVER_TAG ?= "latest"
+SERVER_LIB ?= "/install/lib/"
 SRCDIR ?= $(shell pwd)
 UID ?= $(shell id -u)
 GID ?= $(shell id -g)
 
 # we use local users uid/gid so we can link in .m2 repo
 docker-builder:
-	docker build --build-arg uid=${UID} --build-arg gid=${GID} -t ${IMAGE} .
+	docker build -f Dockerfile.builder --build-arg uid=${UID} --build-arg gid=${GID} -t ${IMAGE} .
 
 # this is for native centos builds
 rpm:
@@ -14,4 +20,15 @@ rpm:
 
 # this is to build from Mac or Linux using docker
 docker-rpm:
-	docker run -it -v ${SRCDIR}:/src -v ${HOME}/.m2:/home/builder/.m2 ${IMAGE} /src/buildrpm.sh
+	docker run --rm -v ${SRCDIR}:/src -v ${HOME}/.m2:/home/builder/.m2 ${IMAGE} /src/buildrpm.sh
+
+
+jar:
+	docker run --rm -v ${SRCDIR}:/src -v ${HOME}/.m2:/home/builder/.m2 ${IMAGE} mvn
+
+bash:
+	docker run -it -v ${SRCDIR}:/src -v ${HOME}/.m2:/home/builder/.m2 ${IMAGE} bash
+
+.PHONY: server
+server:
+	docker build -f Dockerfile.server --build-arg "SERVER=${SERVER_IMAGE}" --build-arg "TAG=${SERVER_TAG}" --build-arg "LIBPATH=${SERVER_LIB}" -t ${PLUGIN_IMAGE} .
