Add dockerfile packaging for plugin, based on a mgmt server image

--- a/src/main/resources/archetype-resources/Makefile
+++ b/src/main/resources/archetype-resources/Makefile
@@ -3,6 +3,8 @@ IMAGE ?= ${REGISTRY}/cloudstack-plugins-builder
 SRCDIR ?= $(shell pwd)
 UID ?= $(shell id -u)
 GID ?= $(shell id -g)
+BASE ?= cloudstack-management
+TAG ?= cloudstack-management-with-plugin
 
 # we use local users uid/gid so we can link in .m2 repo
 docker-builder:
@@ -15,3 +17,6 @@ rpm:
 # this is to build from Mac or Linux using docker
 docker-rpm:
 	docker run -it -v ${SRCDIR}:/src -v ${HOME}/.m2:/home/builder/.m2 ${IMAGE} /src/buildrpm.sh
+
+image:
+	docker build --build-arg base=${BASE} -t ${TAG}  .
