Add common jar to docker image

--- a/src/main/resources/archetype-resources/Dockerfile.cloudstack
+++ b/src/main/resources/archetype-resources/Dockerfile.cloudstack
@@ -3,3 +3,4 @@ ARG base
 FROM ${base}
 
 ADD server/target/*.jar /usr/share/cloudstack-management/lib
+ADD common/target/*.jar /usr/share/cloudstack-management/lib
